@@ -6,9 +6,10 @@ Changes between Oolite 1.74.1 and Oolite 1.74.2:
 * Switching to custom views now allowed in a consistent way.
 * Weapon repeat rate is now per-weapon.
 * Current zoom level is now preserved when switching HUDs.
-* Exhaust plume now resets after hyperspace jumps/scripted teleporting.
+* Exhaust plume now resets after hyperspace jumps/scripted teleporting/shift-D.
 * Fixed overlapping system confusion when loading games and searching for
   systems.
+* All automatically generated sun skimmers should now be adequately shielded.
 * Fixed occasional "bleached"-looking planets on system info screen.
 * Fixed wrong distance showing on the short range chart when switching back from
   the long range chart.
